--- a/requirements.txt
+++ b/requirements.txt
@@ -92,6 +92,64 @@ quickdiagrams
 dtreeplt
 pyprojectviz
 
+# Advanced Diagram and Visualization Tools
+pyreverse
+code2flow
+snakeviz
+pydeps
+diagrams
+diagrams-xtd
+diagrams-yaml
+diagrams-as-code
+flow-diagrams
+protobuf-uml-diagram
+renderschema
+flowdiagram
+mathdiagram
+pyumldiagrams
+matplotlib-set-diagrams
+sphinxcontrib-hdl-diagrams
+sun-path-diagrams
+k8s-diagrams
+er-diagrams-generator
+markdown-diagram-fixer
+yarrow-diagrams
+railroad-diagrams
+syntax-diagrams
+multicloud-diagrams
+bdp
+blockdiag
+palette-diagram
+cadCAD-diagram
+diagram-autobuild
+infrastructure-diagrams
+pydiagrams
+PDFDiagramming
+projman
+idgrms
+N2G
+orthogram
+rptree
+pinout
+pyagram
+nwdiag
+Image2Dia
+autonode-diagrams
+chalk-diagrams
+polar-diagrams
+airflow-diagrams
+diagrams-adapters
+reverse-diagrams
+
+# SVG and Vector Graphics Tools
+pytex2svg
+svg-schematic
+svg-plot
+svg-ultralight
+svg.py
+python-svg
+markdown-graphviz-svg
+
 # Additional utilities
 requests
 beautifulsoup4
